src/main/java/org/opalj/intellijintegration/taclanguage/autogenerated/parser/TAC_parser.java
// This is a generated file. Not intended for manual editing.
package org.opalj.intellijintegration.taclanguage.autogenerated.parser;

import static org.opalj.intellijintegration.taclanguage.autogenerated.parser.TAC_parserParserUtil.*;
import static org.opalj.intellijintegration.taclanguage.autogenerated.psi.TAC_elementTypeHolder.*;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.IFileElementType;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TAC_parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t instanceof IFileElementType) {
      r = parse_root_(t, b, 0);
    } else {
      r = false;
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return jbcFile(b, l + 1);
  }

  /* ********************************************************** */
  // AT JType [LBRACKET
  //                             (
  //                                 STRING COMMA?
  //                               | STRINGVAR EQ STRING COMMA?
  //                               | STRINGVAR EQ BOOLS COMMA?
  //                               | STRINGVAR EQ JType COMMA?
  //                               | STRINGVAR EQ NUMBER COMMA?
  //                               | STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER)
  // COMMA?)* RBRACKET COMMA?
  //                               | LBRACKET? Annotation RBRACKET? COMMA?
  //                             )*
  //                          RBRACKET]
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && JType(b, l + 1);
    r = r && Annotation_2(b, l + 1);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  // [LBRACKET
  //                             (
  //                                 STRING COMMA?
  //                               | STRINGVAR EQ STRING COMMA?
  //                               | STRINGVAR EQ BOOLS COMMA?
  //                               | STRINGVAR EQ JType COMMA?
  //                               | STRINGVAR EQ NUMBER COMMA?
  //                               | STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER)
  // COMMA?)* RBRACKET COMMA?
  //                               | LBRACKET? Annotation RBRACKET? COMMA?
  //                             )*
  //                          RBRACKET]
  private static boolean Annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2")) return false;
    Annotation_2_0(b, l + 1);
    return true;
  }

  // LBRACKET
  //                             (
  //                                 STRING COMMA?
  //                               | STRINGVAR EQ STRING COMMA?
  //                               | STRINGVAR EQ BOOLS COMMA?
  //                               | STRINGVAR EQ JType COMMA?
  //                               | STRINGVAR EQ NUMBER COMMA?
  //                               | STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER)
  // COMMA?)* RBRACKET COMMA?
  //                               | LBRACKET? Annotation RBRACKET? COMMA?
  //                             )*
  //                          RBRACKET
  private static boolean Annotation_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && Annotation_2_0_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // (
  //                                 STRING COMMA?
  //                               | STRINGVAR EQ STRING COMMA?
  //                               | STRINGVAR EQ BOOLS COMMA?
  //                               | STRINGVAR EQ JType COMMA?
  //                               | STRINGVAR EQ NUMBER COMMA?
  //                               | STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER)
  // COMMA?)* RBRACKET COMMA?
  //                               | LBRACKET? Annotation RBRACKET? COMMA?
  //                             )*
  private static boolean Annotation_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Annotation_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Annotation_2_0_1", c)) break;
    }
    return true;
  }

  // STRING COMMA?
  //                               | STRINGVAR EQ STRING COMMA?
  //                               | STRINGVAR EQ BOOLS COMMA?
  //                               | STRINGVAR EQ JType COMMA?
  //                               | STRINGVAR EQ NUMBER COMMA?
  //                               | STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER)
  // COMMA?)* RBRACKET COMMA?
  //                               | LBRACKET? Annotation RBRACKET? COMMA?
  private static boolean Annotation_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation_2_0_1_0_0(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_1(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_2(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_3(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_4(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_5(b, l + 1);
    if (!r) r = Annotation_2_0_1_0_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STRING COMMA?
  private static boolean Annotation_2_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING);
    r = r && Annotation_2_0_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // STRINGVAR EQ STRING COMMA?
  private static boolean Annotation_2_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, EQ, STRING);
    r = r && Annotation_2_0_1_0_1_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_1_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // STRINGVAR EQ BOOLS COMMA?
  private static boolean Annotation_2_0_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, EQ, BOOLS);
    r = r && Annotation_2_0_1_0_2_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_2_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // STRINGVAR EQ JType COMMA?
  private static boolean Annotation_2_0_1_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, EQ);
    r = r && JType(b, l + 1);
    r = r && Annotation_2_0_1_0_3_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_3_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_3_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // STRINGVAR EQ NUMBER COMMA?
  private static boolean Annotation_2_0_1_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, EQ, NUMBER);
    r = r && Annotation_2_0_1_0_4_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_4_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_4_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // STRINGVAR EQ LBRACKET ((STRING | BOOLS | JType | NUMBER) COMMA?)* RBRACKET COMMA?
  private static boolean Annotation_2_0_1_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRINGVAR, EQ, LBRACKET);
    r = r && Annotation_2_0_1_0_5_3(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    r = r && Annotation_2_0_1_0_5_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((STRING | BOOLS | JType | NUMBER) COMMA?)*
  private static boolean Annotation_2_0_1_0_5_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Annotation_2_0_1_0_5_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Annotation_2_0_1_0_5_3", c)) break;
    }
    return true;
  }

  // (STRING | BOOLS | JType | NUMBER) COMMA?
  private static boolean Annotation_2_0_1_0_5_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation_2_0_1_0_5_3_0_0(b, l + 1);
    r = r && Annotation_2_0_1_0_5_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STRING | BOOLS | JType | NUMBER
  private static boolean Annotation_2_0_1_0_5_3_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5_3_0_0")) return false;
    boolean r;
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, BOOLS);
    if (!r) r = JType(b, l + 1);
    if (!r) r = consumeToken(b, NUMBER);
    return r;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_5_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5_3_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_5_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_5_5")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // LBRACKET? Annotation RBRACKET? COMMA?
  private static boolean Annotation_2_0_1_0_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation_2_0_1_0_6_0(b, l + 1);
    r = r && Annotation(b, l + 1);
    r = r && Annotation_2_0_1_0_6_2(b, l + 1);
    r = r && Annotation_2_0_1_0_6_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACKET?
  private static boolean Annotation_2_0_1_0_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_6_0")) return false;
    consumeToken(b, LBRACKET);
    return true;
  }

  // RBRACKET?
  private static boolean Annotation_2_0_1_0_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_6_2")) return false;
    consumeToken(b, RBRACKET);
    return true;
  }

  // COMMA?
  private static boolean Annotation_2_0_1_0_6_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_2_0_1_0_6_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // [LBRACKET ((LEVEL|JType ":") COMMA?)* RBRACKET]
  public static boolean ArrayOrBracket(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_OR_BRACKET, "<array or bracket>");
    ArrayOrBracket_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // LBRACKET ((LEVEL|JType ":") COMMA?)* RBRACKET
  private static boolean ArrayOrBracket_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && ArrayOrBracket_0_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((LEVEL|JType ":") COMMA?)*
  private static boolean ArrayOrBracket_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArrayOrBracket_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArrayOrBracket_0_1", c)) break;
    }
    return true;
  }

  // (LEVEL|JType ":") COMMA?
  private static boolean ArrayOrBracket_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArrayOrBracket_0_1_0_0(b, l + 1);
    r = r && ArrayOrBracket_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEVEL|JType ":"
  private static boolean ArrayOrBracket_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEVEL);
    if (!r) r = ArrayOrBracket_0_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // JType ":"
  private static boolean ArrayOrBracket_0_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0_1_0_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = JType(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean ArrayOrBracket_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayOrBracket_0_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // ATTRIBUTES LBRACKET InnerTable? RBRACKET
  public static boolean AttributesArea(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributesArea")) return false;
    if (!nextTokenIs(b, ATTRIBUTES)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ATTRIBUTES, LBRACKET);
    r = r && AttributesArea_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ATTRIBUTES_AREA, r);
    return r;
  }

  // InnerTable?
  private static boolean AttributesArea_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributesArea_2")) return false;
    InnerTable(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET (JType ["[]"]|PRIMITIVETYPE) RBRACKET  LEVEL
  public static boolean CastIntr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastIntr")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && CastIntr_1(b, l + 1);
    r = r && consumeTokens(b, 0, RBRACKET, LEVEL);
    exit_section_(b, m, CAST_INTR, r);
    return r;
  }

  // JType ["[]"]|PRIMITIVETYPE
  private static boolean CastIntr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastIntr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CastIntr_1_0(b, l + 1);
    if (!r) r = consumeToken(b, PRIMITIVETYPE);
    exit_section_(b, m, null, r);
    return r;
  }

  // JType ["[]"]
  private static boolean CastIntr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastIntr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = JType(b, l + 1);
    r = r && CastIntr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ["[]"]
  private static boolean CastIntr_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastIntr_1_0_1")) return false;
    consumeToken(b, "[]");
    return true;
  }

  /* ********************************************************** */
  // KEYWORDS JType
  public static boolean CaughtInst(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CaughtInst")) return false;
    if (!nextTokenIs(b, KEYWORDS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORDS);
    r = r && JType(b, l + 1);
    exit_section_(b, m, CAUGHT_INST, r);
    return r;
  }

  /* ********************************************************** */
  // ModifierV? (AT?) JAVATYPEHEAD JType (LBRACKET JType COLON RBRACKET JType COLON COLON (NUMBER)?
  // JType)? (EXTENDS JType)? (IMPLEMENTS (JType(COMMA)?)+)?
  public static boolean ClassHead(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_HEAD, "<class head>");
    r = ClassHead_0(b, l + 1);
    r = r && ClassHead_1(b, l + 1);
    r = r && consumeToken(b, JAVATYPEHEAD);
    r = r && JType(b, l + 1);
    r = r && ClassHead_4(b, l + 1);
    r = r && ClassHead_5(b, l + 1);
    r = r && ClassHead_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ModifierV?
  private static boolean ClassHead_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_0")) return false;
    ModifierV(b, l + 1);
    return true;
  }

  // AT?
  private static boolean ClassHead_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_1")) return false;
    consumeToken(b, AT);
    return true;
  }

  // (LBRACKET JType COLON RBRACKET JType COLON COLON (NUMBER)? JType)?
  private static boolean ClassHead_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_4")) return false;
    ClassHead_4_0(b, l + 1);
    return true;
  }

  // LBRACKET JType COLON RBRACKET JType COLON COLON (NUMBER)? JType
  private static boolean ClassHead_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && JType(b, l + 1);
    r = r && consumeTokens(b, 0, COLON, RBRACKET);
    r = r && JType(b, l + 1);
    r = r && consumeTokens(b, 0, COLON, COLON);
    r = r && ClassHead_4_0_7(b, l + 1);
    r = r && JType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (NUMBER)?
  private static boolean ClassHead_4_0_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_4_0_7")) return false;
    consumeToken(b, NUMBER);
    return true;
  }

  // (EXTENDS JType)?
  private static boolean ClassHead_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5")) return false;
    ClassHead_5_0(b, l + 1);
    return true;
  }

  // EXTENDS JType
  private static boolean ClassHead_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && JType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IMPLEMENTS (JType(COMMA)?)+)?
  private static boolean ClassHead_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_6")) return false;
    ClassHead_6_0(b, l + 1);
    return true;
  }

  // IMPLEMENTS (JType(COMMA)?)+
  private static boolean ClassHead_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPLEMENTS);
    r = r && ClassHead_6_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (JType(COMMA)?)+
  private static boolean ClassHead_6_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_6_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ClassHead_6_0_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!ClassHead_6_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassHead_6_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // JType(COMMA)?
  private static boolean ClassHead_6_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_6_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = JType(b, l + 1);
    r = r && ClassHead_6_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA)?
  private static boolean ClassHead_6_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassHead_6_0_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // STRINGVAR
  public static boolean DefMethodName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefMethodName")) return false;
    if (!nextTokenIs(b, STRINGVAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRINGVAR);
    exit_section_(b, m, DEF_METHOD_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // LeftSide EQ RightSide [(OPERATORS) RightSide]
  public static boolean EQInstr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EQInstr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EQ_INSTR, "<eq instr>");
    r = LeftSide(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && RightSide(b, l + 1);
    r = r && EQInstr_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [(OPERATORS) RightSide]
  private static boolean EQInstr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EQInstr_3")) return false;
    EQInstr_3_0(b, l + 1);
    return true;
  }

  // (OPERATORS) RightSide
  private static boolean EQInstr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EQInstr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPERATORS);
    r = r && RightSide(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FIELDS LBRACKET FieldsDeclaration* RBRACKET
  public static boolean FieldArea(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldArea")) return false;
    if (!nextTokenIs(b, FIELDS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FIELDS, LBRACKET);
    r = r && FieldArea_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, FIELD_AREA, r);
    return r;
  }

  // FieldsDeclaration*
  private static boolean FieldArea_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldArea_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FieldsDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FieldArea_2", c)) break;
    }
    return true;
  }
